--- a/platformio.ini
+++ b/platformio.ini
@@ -26,9 +26,9 @@ board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
-upload_port = 192.168.1.17
-upload_protocol = espota
-upload_flags = 
-	--port=3232
-	--auth=12345678
+; upload_port = 192.168.1.17
+; upload_protocol = espota
+; upload_flags = 
+; 	--port=3232
+; 	--auth=12345678
 
