--- a/platformio.ini
+++ b/platformio.ini
@@ -17,18 +17,18 @@ lib_deps =
 	hieromon/AutoConnect@^1.3.1
 	me-no-dev/AsyncTCP@^1.1.1
 	me-no-dev/ESP Async WebServer@^1.2.3
-build_flags =  
-	-DDEBUG_ESP_PORT=Serial 
-	-DDEBUG_ESP_OTA 
-	-DBOARD_HAS_PSRAM 
+	fastled/FastLED@^3.4.0
+build_flags = 
+	-DDEBUG_ESP_PORT=Serial
+	-DDEBUG_ESP_OTA
+	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
-; upload_port = 192.168.1.17
+; upload_port = 192.168.1.15
 ; upload_protocol = espota
 ; upload_flags = 
 ; 	--port=3232
 ; 	--auth=12345678
-
