Wifi reconnect and status

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	me-no-dev/AsyncTCP@^1.1.1
 	me-no-dev/ESP Async WebServer@^1.2.3
 	fastled/FastLED@^3.4.0
+	contrem/arduino-timer@^2.3.1
 build_flags = 
 	-DDEBUG_ESP_PORT=Serial
 	-DDEBUG_ESP_OTA
@@ -27,8 +28,8 @@ board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
-; upload_port = 192.168.1.15
-; upload_protocol = espota
-; upload_flags = 
-; 	--port=3232
-; 	--auth=12345678
+upload_port = 192.168.1.38
+upload_protocol = espota
+upload_flags = 
+	--port=3232
+	--auth=12345678
