--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32cam]
+[platformio]
+default_envs = debug ; DO NOT CHANGE THIS VALUE
+
+[common]
 platform = espressif32
 board = esp32cam
 framework = arduino
@@ -25,9 +28,56 @@ build_flags =
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 board_build.partitions = min_spiffs.csv
+release_version = 0.0.1 ; Modify with the version of the project
+lib_ldf_mode = deep+
+upload_speed = 921600
 monitor_speed = 115200
 monitor_rts = 0
 monitor_dtr = 0
+extra_scripts = 
+	;pre:customname.py
+	;pre:inject_path.py
+
+[env:debug]
+platform = ${common.platform}
+framework = ${common.framework}
+board = ${common.board}
+build_flags = 
+	${common.build_flags}
+	-DCORE_DEBUG_LEVEL=4
+	-DVERSION=0
+lib_deps = 
+	${common.lib_deps}
+monitor_speed = ${common.monitor_speed}
+monitor_rts = ${common.monitor_rts}
+monitor_dtr = ${common.monitor_dtr}
+upload_speed = ${common.upload_speed}
+board_build.partitions = ${common.board_build.partitions}
+extra_scripts = ${common.extra_scripts}
+lib_ldf_mode = ${common.lib_ldf_mode}
+monitor_filters = 
+	colorize
+	log2file
+	time
+	default
+
+[env:OTA]
+platform = ${common.platform}
+framework = ${common.framework}
+board = ${common.board}
+build_flags = 
+	${common.build_flags}
+	-DCORE_DEBUG_LEVEL=1
+	-DVERSION=${common.release_version}
+lib_deps = 
+	${common.lib_deps}
+upload_speed = ${common.upload_speed}
+monitor_speed = ${common.monitor_speed}
+monitor_rts = ${common.monitor_rts}
+monitor_dtr = ${common.monitor_dtr}
+extra_scripts = ${common.extra_scripts}
+board_build.partitions = ${common.board_build.partitions}
+lib_ldf_mode = ${common.lib_ldf_mode}
 upload_port = 192.168.1.38
 upload_protocol = espota
 upload_flags = 
