- Changing `lib_ldf_mode` from `deep+` to `deep` to fix chain-linking error in the `PageBuilder` library. `deep+` is causing `SPIFFS.h` not found during compile. `deep` fixes this issue.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ build_flags =
 	-mfix-esp32-psram-cache-issue
 board_build.partitions = min_spiffs.csv
 release_version = 0.0.1 ; Modify with the version of the project
-lib_ldf_mode = deep+
+lib_ldf_mode = deep
 upload_speed = 921600
 monitor_speed = 115200
 monitor_rts = 0
