--- a/platformio.ini
+++ b/platformio.ini
@@ -55,7 +55,7 @@ board_build.partitions = ${common.board_build.partitions}
 extra_scripts = ${common.extra_scripts}
 lib_ldf_mode = ${common.lib_ldf_mode}
 monitor_filters = 
-	colorize
+	; colorize
 	log2file
 	time
 	default
